feat: hexagonal architecture example with generated mocks
