# internal/primary/server/types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package server
 
+import (
+	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
+)
+
 // Defines values for ChannelInputSource.
 const (
 	LIVE ChannelInputSource = "LIVE"
@@ -11,6 +15,7 @@ const (
 
 // Channel defines model for Channel.
 type Channel struct {
+	Id    *ChannelID   `json:"id,omitempty"`
 	Input ChannelInput `json:"input"`
 
 	// Name Channel configuration unique name. At creation, if not provided it will be generated.
@@ -18,6 +23,12 @@ type Channel struct {
 
 	// OnAir If enabled, channel is available for end-users.
 	OnAir *bool `json:"on_air,omitempty"`
+}
+
+// ChannelID defines model for ChannelID.
+type ChannelID struct {
+	// Id Channel configuration unique identifier.
+	Id *openapi_types.UUID `json:"id,omitempty"`
 }
 
 // ChannelInput defines model for ChannelInput.
